<resources>
    <string name="app_name">Sigma Social</string>
    <string name="login_header">Welcome to Sigma</string>
    <string name="login_header_two">The Exclusive Greek and College Dating App</string>
    <string name="email_text">Email</string>
    <string name="fraternity_text">Fraternity</string>
    <string name="sorority_text">Sorority</string>
    <string name="independent_text">Independent</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_error">Invalid email address</string>
    <string name="phone_text">Phone Number</string>
    <string name="phone_xx">xxx-xxx-xxxx</string>
    <string name="password_text">Password</string>
    <string name="send_otp_text">SEND OTP</string>
    <string name="send_enter_text">Enter OTP</string>
    <string name="stepone_header">Tell us a little\n about yourself.</string>
    <string name="name_ask_text">What is your name?</string>
    <string name="what_school">Which College or University do you attend?</string>
    <string name="first_name_text">First Name</string>
    <string name="hint_school_name">School Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="iam_text">I am a</string>
    <string name="woman_text">Women</string>
    <string name="man_text">Man</string>
    <string name="more">Man</string>
    <string name="forgot_password_text">Forgot Password? </string>
    <string name="dont_have_acc">Don\'t have an account </string>
    <string name="signup_text">SIGN UP</string>
    <string name="sign_in_text">OR SIGN IN WITH</string>
    <string name="continue_text">CONTINUE</string>
    <string name="tell_us">Tell us a little\nabout yourself.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="tell_us_school">Tell us about\n your school</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_onboarding">OnboardingActivity_</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="internet_error_message">Internet Connection Not Present</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internetdisconnect">internet not connected</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="facebook_app_id">1153185138897679</string>
    <string name="fb_login_protocol_scheme">fb1153185138897679</string>
    <string name="facebook_client_token">2adb7bbfa0c7f0c103f8973c668d818c</string>
    <string name="term_and_condition">I agree with the <u>Terms and Conditions</u> <a href="https://www.rushdatingapp.com/terms-and-conditions/"></a></string>
    <string name="password_strength_weak">Your Password is Weak</string>
    <string name="password_strength_medium">Your Password is Medium</string>
    <string name="password_strength_strong">Your Password is Strong</string>
    <string name="password_strength_very_strong">Your Password is Very Strong</string>
    <string name="new_message">New message</string>
    <string name="message_send_error">An error has occurred. Tap for more info.</string>
    <string name="title_activity_advertising">AdvertisingActivity</string>
    <string name="reject">Decline</string>
    <string name="accept">Answer</string>

    <!-- https://api.instagram.com/oauth/authorize?client_id=3446740358985126&
    redirect_uri=https://medium.com//200&scope=user_profile,user_media&response_type=code-->

    <!--//Client ID  574636637575-uar7lnj32cd72draf2v36jntkrh5hm0c.apps.googleusercontent.com
    //Client Secret  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-->

</resources>