<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white_with_opecity"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageView4"
    app:layout_constraintVertical_weight="6">

    <TextView
        android:id="@+id/textView"
        style="@style/QText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:paddingLeft="8dp"
        android:text="@string/tell_us_school"
        android:textColor="@color/light_text_color"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        style="@style/QText"
        android:text="@string/what_school"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:alpha=".8"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


<!--
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/schoolAct_spinner"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        style="@android:style/Widget.Holo.Light.Spinner"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
-->
<EditText
    android:id="@+id/schoolAct_spinner"
    android:layout_width="0dp"
    android:layout_height="54dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/login_field_border_bg"
    android:hint="Select School"
    style="@android:style/Widget.Holo.Light.Spinner"
    app:layout_constraintEnd_toEndOf="@+id/guideline5"
    app:layout_constraintStart_toStartOf="@+id/guideline4"
    app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <LinearLayout
        android:id="@+id/linearr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28sp"
        android:background="@drawable/gray_circle_radius_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/schoolAct_spinner">

        <Button
            android:id="@+id/fraternity_button"
            android:layout_width="0dp"
            style="@style/QText"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:background="@drawable/white_radius_bg"
            android:text="@string/fraternity_text"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <Button
            android:id="@+id/Socority_button"
            android:layout_width="0dp"
            style="@style/QText"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_weight=".5"
            android:background="@drawable/gray_circle_radius_bg"
            android:text="@string/sorority_text"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />



    <EditText
        android:id="@+id/et_type"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_field_border_bg"
        android:hint="Select Fraternity"
        style="@android:style/Widget.Holo.Light.Spinner"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/linearr"/>

    <Button
        android:id="@+id/continue_school"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="100dp"
        android:visibility="visible"
        android:background="@drawable/signup_circle_bg"
        android:fontFamily="@font/varela_regular"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>