<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_f1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title"
        style="@style/QText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/otp_verification"
        android:textColor="@color/light_text_color"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        style="@style/QText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="12dp"
        android:alpha=".8"
        android:text="Select an option to receive the OTP"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <LinearLayout
        android:id="@+id/linearr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/gray_circle_radius_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@id/textView4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/email_button_verification"
            style="@style/QText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".5"
            android:background="@drawable/gray_circle_radius_bg"
            android:text="@string/email_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/phone_number_verification"
            style="@style/QText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_weight=".5"
            android:background="@drawable/gray_circle_radius_bg"
            android:text="@string/phone_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


    <EditText
        android:id="@+id/editText_otp_verification"
        style="@style/NormalText"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="1dp"
        android:background="@drawable/login_field_border_bg"
        android:drawablePadding="10dp"
        android:hint="@string/send_enter_text"
        android:inputType="text"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/linearr" />


    <Button
        android:id="@+id/verfie_otp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/circle_radius_bg"
        android:text="VERIFY OTP"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/editText_otp_verification" />


    <Button
        android:id="@+id/verification_done"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/white_circle_bg"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@color/hint_text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/verfie_otp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_begin="100dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp" />


</androidx.constraintlayout.widget.ConstraintLayout>