<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/constraint_f1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/imageView4"
    app:layout_constraintVertical_weight="6">

    <TextView
        android:id="@+id/textView"
        style="@style/QText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:paddingLeft="8dp"
        android:text="Access\ncredentials"
        android:textColor="@color/light_text_color"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="8dp"
        style="@style/QText"
        android:text="Create your password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:alpha=".8"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_field_border_bg"
        android:textColorHint="@color/hint_text_color"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayout"
        app:passwordToggleTint="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:letterSpacing="0.10"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_editText_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_field_border_bg"
        android:textColorHint="@color/hint_text_color"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayout"
        app:passwordToggleTint="@color/hint_text_color"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/layout_password">

        <EditText
            android:id="@+id/editText_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="confirm Password"
            android:inputType="textPassword"
            android:letterSpacing="0.10"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:maxHeight="20dip"
        android:minHeight="20dip"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/layout_editText_password_confirm" />

    <TextView
        android:id="@+id/password_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/password_strength_weak"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


    <Button
        android:id="@+id/create_password"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/signup_circle_bg"
        android:fontFamily="@font/varela_regular"
        android:text="@string/continue_text"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />


</androidx.constraintlayout.widget.ConstraintLayout>